--- a/client/src/app/+admin/registration-admin/registration-admin.component.html
+++ b/client/src/app/+admin/registration-admin/registration-admin.component.html
@@ -13,7 +13,7 @@
           </md-option>
         </md-select>-->
 
-    <div class="line" *ngFor="let person of personDataService.items | async">
+    <div class="line" *ngFor="let person of sortedPersons | async">
       <button md-button class="grayButton" [routerLink]="[{ outlets: { admin: ['changePerson'] } }]">
         <md-icon>edit</md-icon>
         <span class="size-xl">ändern</span></button>
