--- a/client/src/app/+admin/registration-admin/registration-admin.component.html
+++ b/client/src/app/+admin/registration-admin/registration-admin.component.html
@@ -1,13 +1,13 @@
 <div *ngIf="!selectedPerson">
-  <div class="div__header">
+  <div class="div__header  div--maxwith">
     <h3 class="h3__small-margins">Anmeldungen</h3>
     <span class="fill-remaining-space"></span>
-    <button md-button [disabled]="!sortedPersons" (click)="saveFile()">
+    <button md-button  class="grayButton" [disabled]="!sortedPersons" (click)="saveFile()">
       <md-icon>forward</md-icon>
       Export
     </button>
   </div>
-  <div class="group-container">
+  <div class="div--maxwith div--margins">
     <!--  <div class="table">
         <md-select placeholder="Gruppenfilter" name="filter" class="topborder"
                    (ngModelChange)="updateSubgroup($event)">
