--- a/client/src/app/+admin/registration-admin/registration-admin.component.html
+++ b/client/src/app/+admin/registration-admin/registration-admin.component.html
@@ -17,7 +17,7 @@
         </md-select>-->
 
     <div class="line" *ngFor="let person of sortedPersons | async">
-      <button md-button class="grayButton" [routerLink]="[{ outlets: { admin: ['changePerson'] } }]">
+      <button md-button class="grayButton" [routerLink]="[ '/admin/dashboard/change-person' ]">
         <md-icon>edit</md-icon>
         <span class="size-xl">ändern</span></button>
       <button md-button class="grayButton" (click)="showDetails(person)">
