move some stylings to styles.scss

--- a/client/src/app/+registration/registration/registration.component.html
+++ b/client/src/app/+registration/registration/registration.component.html
@@ -1,4 +1,6 @@
-<h2 class="h2-element">Anmeldung</h2>
+<div class="div__header  div--maxwith">
+  <h3 class="h3__small-margins">Anmeldung</h3>
+</div>
 <form class="form" #f="ngForm" novalidate (ngSubmit)="save(f.value, f.valid)">
   <section class="section">
     <div class="select-container">
