--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -14,8 +14,19 @@ h2 {
   font-size: 100%;
 }
 
+.div__header {
+  display: flex;
+  align-items: center;
+  background: #9fdee0;
+  padding: 0.5em;
+}
+
 .div--margins {
   margin: 0.5em;
+}
+
+.h3__small-margins {
+  margin: 0;
 }
 
 .div--maxwith {
