--- a/client/src/app/+admin/login/login.component.html
+++ b/client/src/app/+admin/login/login.component.html
@@ -1,5 +1,7 @@
+<div class="div__header">
+  <h3 class="h3__small-margins h3__padding">Administrationsbereich</h3>
+</div>
 <div class="admin-container">
-  <h2>Administrationsbereich</h2>
   <h3>Anmeldung</h3>
   <form class="form" [formGroup]="form" novalidate>
     <section class="section">
