--- a/client/src/app/+admin/logout/logout.component.html
+++ b/client/src/app/+admin/logout/logout.component.html
@@ -1,5 +1,7 @@
+<div class="div__header">
+  <h3 class="h3__small-margins h3__padding">Administrationsbereich</h3>
+</div>
 <div class="logout-container">
-  <h2>Administrationsbereich</h2>
   <h3>Auf Wiedersehen ...</h3>
   <p>Du hast dich abgemeldet.</p>
   <p>Zurück zum <a [routerLink]="['/admin/login']">Login</a></p>
