--- a/client/src/app/+admin/password-change/password-change.component.html
+++ b/client/src/app/+admin/password-change/password-change.component.html
@@ -1,5 +1,7 @@
+<div class="div__header">
+  <h3 class="h3__small-margins h3__padding">Passwort ändern</h3>
+</div>
 <div class="admin-container">
-  <h2>Passwort ändern</h2>
   <form class="form" #f="ngForm" novalidate (ngSubmit)="changePassword(f.value, f)">
     <section class="section">
       <md-input-container class="full-width">
