--- a/client/src/app/team/team.component.html
+++ b/client/src/app/team/team.component.html
@@ -1,3 +1,6 @@
+<div class="div__header">
+  <h3 class="h3__small-margins h3__padding">Team</h3>
+</div>
 <div class="card-container">
   <md-card class="card">
     <md-card-header>
