--- a/client/src/app/info/info.component.html
+++ b/client/src/app/info/info.component.html
@@ -1,3 +1,6 @@
+<div class="div__header">
+  <h3 class="h3__small-margins h3__padding">Info</h3>
+</div>
 <div class="info-container">
   <h2>Einleitung</h2>
   <p>Das Pfingstlager wird von einem <a [routerLink]="['/team']">Team</a> aus der (<a href="http://www.besj.ch">BESJ</a>)-Region
