--- a/client/src/app/info/info.component.html
+++ b/client/src/app/info/info.component.html
@@ -8,8 +8,9 @@
     gehören zu unserer Region. Unsere <a href="http://www.besj.ch/ueber-uns/der-besj/grundwerte/">Grundwerte</a> sind
     auf
     der Verbandswebseite zu finden.</p>
-  <p> Eingeladen für das Pfila sind alle Kinder der oben erwähnten Gruppen.
-    Es ist auch möglich, dass sich Kinder anmelden, welche nicht zu diesen Gruppen gehören.</p>
+  <p> Eingeladen für das Pfila sind alle Kinder der oben erwähnten Gruppen, sowie Kinder, die keiner Gruppe angehören.</p>
+  <h2>Thema</h2>
+  <p>Wie hören und erleben die biblische Geschichte von Nehemia.</p>
   <h2>Ort</h2>
   <p>Der Pfila Lagerplatz liegt zwischen Buckten und Häfelfingen.</p>
   <h2>Datum</h2>
@@ -19,8 +20,9 @@
   </ul>
   <h2>Altersgrenzen</h2>
   <ul>
-    <li>Jungschärler: Kinder zwischen 8-14 Jahren</li>
-    <li>Ameisli: Kinder 5 Jahren</li>
+    <li>Jungschärler: Kinder zwischen 8-14 Jahren *</li>
+    <li>Ameisli: Kinder ab 5 Jahren *</li>
+    <p>* Die Altersangaben der einzelnen Gruppen können abweichen und sind jeweils verbindlich.</p>
   </ul>
   <h2>Kosten</h2>
   <ul>
@@ -28,7 +30,7 @@
     <li>Ameisli: CHF 20.-</li>
   </ul>
   <h2>Anmeldeschluss</h2>
-  <p>Der Anmeldeschluss ist der <b>13. Mai 2017</b>.</p>
+  <p>Der Anmeldeschluss ist der Samstag, der <b>13. Mai 2017</b>.</p>
   <h2>Anmeldung</h2>
   <p>Du kannst dich <a [routerLink]="['/registration']">hier online</a> oder bei deinen Jungschi / Anmeisli Leitern
     anmelden.</p>
