--- a/client/src/app/team/team.component.html
+++ b/client/src/app/team/team.component.html
@@ -15,7 +15,7 @@
       <div>Mobile:</div>
       <div class="indent">078 861 36 54</div>
       <div>E-Mail:</div>
-      <div class="indent">david.leuenberger@gmx.ch</div>
+      <div class="indent">david.leuenberger(at)gmx.ch</div>
     </md-card-content>
   </md-card>
   <md-card class="card">
@@ -33,13 +33,13 @@
       <div>Mobile:</div>
       <div class="indent">076 667 55 27</div>
       <div>E-Mail:</div>
-      <div class="indent">sandra.grossmann@gmx.ch</div>
+      <div class="indent">sandra.grossmann(at)gmx.ch</div>
     </md-card-content>
   </md-card>
   <md-card class="card">
     <md-card-header>
       <md-card-title>David Senn</md-card-title>
-      <md-card-subtitle>Verpflegung</md-card-subtitle>
+      <md-card-subtitle>Verpflegung, Sanität</md-card-subtitle>
     </md-card-header>
     <md-card-content>
       <br>
@@ -49,7 +49,7 @@
       <div>Mobile:</div>
       <div class="indent">076 490 90 54</div>
       <div>E-Mail:</div>
-      <div class="indent">davidsenn79@hotmail.com</div>
+      <div class="indent">davidsenn79(at)hotmail.com</div>
     </md-card-content>
   </md-card>
 </div>
