change menu entries

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,4 @@
 <md-sidenav-container fullscreen>
-
   <header class="header">
     <button md-icon-button (click)="sidenav.open()">
       <md-icon>menu</md-icon>
@@ -26,11 +25,11 @@
       <a md-list-item [routerLink]="['/registration']" (click)="sidenav.close()">
         <md-icon md-list-icon>grade</md-icon>
         <span md-line>Anmeldung</span>
-        <span md-line class="secondary">für Ameisli und Jungschärler</span>
+        <span md-line class="secondary">für Ameisli, Jungschärler & Leiter</span>
       </a>
       <a md-list-item [routerLink]="['/team']" (click)="sidenav.close()">
         <md-icon md-list-icon>people</md-icon>
-        <span md-line>Team</span>
+        <span md-line>Kontakt</span>
         <span md-line class="secondary">Verantwortliches Team</span>
       </a>
       <div class="menu__separator"></div>
