add home page content, add slider

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,4 +1,20 @@
-<div class="home-container">
-  <p><a [routerLink]="['/info']">Info</a></p>
-  <p><a [routerLink]="['/registration']">Anmeldungen</a></p>
+<div color="primary" class="div__headermenu">
+  <h3 class="h3--left-right-margins">Home</h3>
+  <button md-button class="button" (click)="onInfo()">Info</button>
+  <button md-button class="button" (click)="onRegistration()">Anmeldung</button>
+  <button md-button class="button" (click)="onTeam()">Kontakt</button>
+</div>
+<div id="slider">
+  <figure>
+    <img src="assets/img/Flyer-1920.jpg" alt="Flyer"
+         srcset="assets/img/Flyer-0400.jpg 650w,
+            assets/img/Flyer-0600.jpg 950w,
+            assets/img/Flyer-1000.jpg 1500w,
+            assets/img/Flyer-1920.jpg 3000w">
+    <img src="assets/img/Zelt-1920.jpg" alt="Zelt"
+         srcset="assets/img/Zelt-0400.jpg 650w,
+            assets/img/Zelt-0600.jpg 950w,
+            assets/img/Zelt-1000.jpg 1500w,
+            assets/img/Zelt-1920.jpg 20000w">
+  </figure>
 </div>
