--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -49,6 +49,23 @@ h2 {
   flex: 1 1 auto;
 }
 
+.div__headermenu {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  background-color: #7fbec0;
+}
+
+.button {
+  padding: 0 1em 0 1em;
+  margin: 0;
+  min-width: 0;
+}
+
+.h3--left-right-margins {
+  margin: 0 0.5em 0 0.5em;
+}
+
 
 
 
