--- a/client/src/app/team/team.component.html
+++ b/client/src/app/team/team.component.html
@@ -1,5 +1,5 @@
 <div class="div__header">
-  <h3 class="h3__small-margins h3__padding">Team</h3>
+  <h3 class="h3__small-margins h3__padding">Kontakt</h3>
 </div>
 <div class="card-container">
   <md-card class="card">
